--- a/b.html
+++ b/b.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello bootstarp</h1>
-    <h2>hello gwalior</h2>
+    <h1>anurag meri aulaad</h1>
 </body>
 </html>
